force-app/main/default/objects/Answer_Option__c/Answer_Option__c.object-meta.xml
<CustomObject>
    <description
  >Possible answer choices for questionnaire questions, each associated with a Jungian personality classification.</description>
    <label>Answer Option</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>