force-app/main/default/objects/Answer_Option__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <description
  >The text content of this answer option displayed to users.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Enter the answer text that will be shown to users as a selectable option.</inlineHelpText>
    <label>Answer Text</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>