force-app/main/default/objects/Answer_Option__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description
  >The Jungian personality classification associated with this answer option.</description>
    <inlineHelpText
  >Select the Jungian cognitive function or attitude this answer represents: Extroverted, Introverted, Thinking, Feeling, Intuition, or Sensing.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extroverted</fullName>
            </value>
            <value>
                <fullName>Introverted</fullName>
            </value>
            <value>
                <fullName>Thinking</fullName>
            </value>
            <value>
                <fullName>Feeling</fullName>
            </value>
            <value>
                <fullName>Intuition</fullName>
            </value>
            <value>
                <fullName>Sensing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>