force-app/main/default/objects/Answer_Option__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >Determines the display sequence of answer options for the question.</description>
    <inlineHelpText
  >Enter a number to control the order in which answer options appear (e.g., 1, 2, 3).</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>