force-app/main/default/objects/Answer_Option__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Links this answer option to its parent question.</description>
    <inlineHelpText>The question this answer option belongs to.</inlineHelpText>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answer Options</relationshipLabel>
    <relationshipName>Answer_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>